[gd_scene load_steps=8 format=3 uid="uid://ckpy6pimwoumv"]

[ext_resource type="Script" uid="uid://nu3arjcxesy8" path="res://src/characters/player.gd" id="1_ohfbi"]
[ext_resource type="Texture2D" uid="uid://eshn4bjaxrkm" path="res://res/player.png" id="2_ehvfd"]
[ext_resource type="Texture2D" uid="uid://d3fewh2rgdosc" path="res://res/player_particle.png" id="2_gmfve"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpct2"]
size = Vector2(45, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lowyb"]
size = Vector2(90, 60)

[sub_resource type="LabelSettings" id="LabelSettings_4c870"]
font_size = 12
font_color = Color(0, 0, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ehvfd"]
particle_flag_disable_z = true
angular_velocity_min = -1.60933e-05
angular_velocity_max = -1.60933e-05
radial_velocity_min = 26.14
radial_velocity_max = 235.29
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = -2.23517e-06
radial_accel_min = -2.23517e-06
radial_accel_max = -2.23517e-06
tangential_accel_min = -100.0
tangential_accel_max = 100.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_ohfbi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tpct2")

[node name="OnFloor" type="Area2D" parent="."]
position = Vector2(0, 10)
collision_layer = 4
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnFloor"]
position = Vector2(-0.5, 7)
shape = SubResource("RectangleShape2D_lowyb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ehvfd")

[node name="Animation" type="Label" parent="Sprite2D"]
offset_left = -19.0
offset_top = -9.0
offset_right = 21.0
offset_bottom = 14.0
text = "idle"
label_settings = SubResource("LabelSettings_4c870")
horizontal_alignment = 1

[node name="WallParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 7)
emitting = false
amount = 16
texture = ExtResource("2_gmfve")
process_material = SubResource("ParticleProcessMaterial_ehvfd")

[node name="JumpParticles" type="GPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, 7)
emitting = false
amount = 16
texture = ExtResource("2_gmfve")
lifetime = 0.5
interp_to_end = 0.3
one_shot = true
explosiveness = 0.2
process_material = SubResource("ParticleProcessMaterial_ehvfd")

[node name="EnemyMarker" type="Marker2D" parent="."]
position = Vector2(154, -12)
gizmo_extents = 20.0
